@@ -1,19 +1,34 @@
 package ui;
 
 import java.util.List;
-
+import java.util.Arrays;
 import model.LoginRequest;
 import model.UserData;
 
 public class PreloginUI extends UserInterface {
     PreloginUI() {
         super();
+        initializeCommands();
+    }
 
-        this.cmds.put("register", new FunctionPair<>(List.of("register", "r"),
-                new Arguments(List.of("username", "password", "email")), "Register a new user.", this::register));
-        this.cmds.put("login", new FunctionPair<>(List.of("login", "l"),
-                new Arguments(List.of("username", "password")), "Login to an existing account.", this::login));
-        this.cmds.put("quit", new FunctionPair<>(List.of("quit"), "Quit the program.", this::quit));
+    private void initializeCommands() {
+        this.cmds.put("register", new FunctionPair<>(
+                Arrays.asList("register", "r"),
+                new Arguments(Arrays.asList("username", "password", "email")),
+                "Register a new user.",
+                this::register
+        ));
+        this.cmds.put("login", new FunctionPair<>(
+                Arrays.asList("login", "l"),
+                new Arguments(Arrays.asList("username", "password")),
+                "Login to an existing account.",
+                this::login
+        ));
+        this.cmds.put("quit", new FunctionPair<>(
+                Arrays.asList("quit"),
+                "Quit the program.",
+                this::quit
+        ));
     }
 
     private String quit() {
@@ -21,27 +36,24 @@ public class PreloginUI extends UserInterface {
     }
 
     private String register(String argString) {
-        String[] args = argString.split(" ");
-        if (args.length != 3) {
+        List<String> args = Arrays.asList(argString.split(" "));
+        if (args.size() != 3) {
             return "Invalid number of arguments. Use `help` for command info.";
         }
 
-        String username = args[0];
-        String password = args[1];
-        String email = args[2];
-        Data.getInstance().getServerFacade().register(new UserData(username, password, email));
+        UserData userData = new UserData(args.get(0), args.get(1), args.get(2));
+        Data.getInstance().getServerFacade().register(userData);
         return "Successfully registered.";
     }
 
     private String login(String argString) {
-        String[] args = argString.split(" ");
-        if (args.length != 2) {
+        List<String> args = Arrays.asList(argString.split(" "));
+        if (args.size() != 2) {
             return "Invalid number of arguments. Use `help` for command info.";
         }
 
-        String username = args[0];
-        String password = args[1];
-        Data.getInstance().getServerFacade().login(new LoginRequest(username, password));
+        LoginRequest loginRequest = new LoginRequest(args.get(0), args.get(1));
+        Data.getInstance().getServerFacade().login(loginRequest);
         return "Successfully logged in.";
     }
 }
