@@ -1,74 +1,55 @@
 package ui;
 
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class UserInterface implements BaseUI {
 
-    protected Map<String, FunctionPair<String>> cmds;
+    protected final Map<String, FunctionPair<String>> cmds;
 
     UserInterface() {
         this.cmds = new LinkedHashMap<>();
-        this.cmds.put("help", new FunctionPair<>(List.of("help", "h"), "Displays this help message.", this::help));
+        this.cmds.put("help", new FunctionPair<>(Arrays.asList("help", "h"), "Displays this help message.", this::help));
     }
 
     @Override
     public String help() {
-        List<String> commands = new ArrayList<>();
-        for (String key : cmds.keySet()) {
-            FunctionPair<String> f = cmds.get(key);
-            String callers;
-            String helpMsg;
+        return cmds.entrySet().stream()
+                .map(this::formatHelpMessage)
+                .collect(Collectors.joining("\n"));
+    }
 
-            String args = "";
+    private String formatHelpMessage(Map.Entry<String, FunctionPair<String>> entry) {
+        String key = entry.getKey();
+        FunctionPair<String> f = entry.getValue();
+        String callers = formatCallers(f.getKeys());
+        String args = formatArgs(f.getArgs());
+        return String.format("%s%s:%s\n\t%s%s %s%s- %s",
+                EscapeSequences.SET_TEXT_BOLD + EscapeSequences.SET_TEXT_COLOR_MAGENTA, key,
+                EscapeSequences.RESET_TEXT_BOLD_FAINT, EscapeSequences.SET_TEXT_COLOR_BLUE, callers, args,
+                EscapeSequences.SET_TEXT_COLOR_LIGHT_GREY, f.getHelp());
+    }
 
-            callers = String.join("|", f.getKeys());
-            callers = String.format("%s[%s]%s", EscapeSequences.SET_TEXT_BOLD, callers,
-                    EscapeSequences.RESET_TEXT_BOLD_FAINT);
-            if (f.getArgs() != null) {
-                args = EscapeSequences.SET_TEXT_BOLD + EscapeSequences.SET_TEXT_ITALIC + f.getArgs().toString()
-                        + EscapeSequences.RESET_TEXT_BOLD_FAINT + EscapeSequences.RESET_TEXT_ITALIC;
-            }
+    private String formatCallers(List<String> callers) {
+        return String.format("%s[%s]%s", EscapeSequences.SET_TEXT_BOLD,
+                String.join("|", callers), EscapeSequences.RESET_TEXT_BOLD_FAINT);
+    }
 
-            helpMsg = String.format("%s%s:%s\n\t%s%s %s%s- %s",
-                    EscapeSequences.SET_TEXT_BOLD + EscapeSequences.SET_TEXT_COLOR_MAGENTA, key,
-                    EscapeSequences.RESET_TEXT_BOLD_FAINT, EscapeSequences.SET_TEXT_COLOR_BLUE, callers, args,
-                    EscapeSequences.SET_TEXT_COLOR_LIGHT_GREY, f.getHelp());
-
-            commands.add(helpMsg);
-        }
-        return String.join("\n", commands);
+    private String formatArgs(Object args) {
+        return args != null ? EscapeSequences.SET_TEXT_BOLD + EscapeSequences.SET_TEXT_ITALIC + args.toString()
+                + EscapeSequences.RESET_TEXT_BOLD_FAINT + EscapeSequences.RESET_TEXT_ITALIC : "";
     }
 
     @Override
     public String runCmd(String cmd) {
-        String cmdCaller;
-        String args;
-
-        // Split the command string into command and arguments
         String[] parts = cmd.split(" ", 2);
+        String cmdCaller = parts[0].toLowerCase();
+        String args = parts.length > 1 ? parts[1] : "";
 
-        if (parts.length == 1) {
-            cmdCaller = parts[0];
-            args = "";
-        }
-        else {
-            cmdCaller = parts[0];
-            args = parts[1];
-        }
-
-        cmdCaller = cmdCaller.toLowerCase();
-
-        // Iterate over available commands and execute the matching one
-        for (FunctionPair<String> f : cmds.values()) {
-            if (f.getKeys().contains(cmdCaller)) {
-                return f.apply(args);
-            }
-        }
-
-        return help();
+        return cmds.values().stream()
+                .filter(f -> f.getKeys().contains(cmdCaller))
+                .findFirst()
+                .map(f -> f.apply(args))
+                .orElse(help());
     }
-
 }
